package com.jpabook.jpashop.domain.delivery;

public enum DeliveryStatus {
	READY, COMP
}
