package com.jpabook.jpashop.domain.order;

public enum OrderStatus {
	ORDER, CANCEL
}
